# ezCV-operators

./: README.md  pyproject.toml
ezcv_operators/: __init__.py  blur.py  contours.py  threshold.py
tests/: test_all.py
