[tool.poetry]
name = "ezcv-operators"
version = "0.1.0"
description = ""
authors = ["Frederico Tommasi Caroli <fredtcaroli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7,<3.11"
ezcv = { git = "https://github.com/fredtcaroli/ezCV" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.ezcv-operators]
"core" = "ezcv_operators"
